# JobAIder

./: .env.example  .env.icecloud.example  .gitignore  DEPLOYMENT.md  ICECLOUD_DEPLOYMENT.md  README.md  UBUNTU_DEPLOYMENT.md  docker-compose.yml  init-commands.sh  jobradar.db  start_all.sh  start_backend.sh  start_frontend.sh  stop_all.sh  tailored-resume.md
Interview_prep/: Introduction.md
Jobs/: NOKIA_Product_Manager_AL_ML.JD  NOKIA_Product_Manager_AL_ML.txt  RD_Leader_Nokia.txt
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  auth.py  db.py  main.py  schemas.py
backend/app/core/: config.py
backend/app/modules/: __init__.py  document_ingestion.py  gap_analyzer.py  improvement_planner.py  interview_coach.py  llm_provider.py  obsidian_parser.py  profile_builder.py  resume_generator.py  role_analyzer.py
backend/jobradar_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: README.md  USAGE.md  ats-resume.md  full_repository_architecture.md  human-friendly-resume.md  jobradar-api-contracts.md  jobradar-database-schema.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: app-shell.tsx  page-header.tsx  providers.tsx  resume-context-panel.tsx  saved-selectors.tsx  status-panel.tsx
frontend/lib/: api.ts  auth.ts
logs/: error.txt  error_2.txt  error_3.txt  rollout-2026-06-04T23-51-23-019e93de-594d-7e30-8f7f-9b4e98f9b4b1.jsonl
(+15 files in other folders)
