[project]
name = "jobradar-backend"
version = "0.1.0"
description = "Local-first AI job application assistant backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "pypdf>=4.3.0",
  "python-docx>=1.1.2"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.3.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"
